<resources>
    <string name="app_name">MoneyStream</string>

    <string name="hello_blank_fragment">Hello World</string>
    <string name="fragment_event_list_title">EventListFragment</string>

    <string name="title_main">MoneyStream</string>

    <string name="event_activity_title">[イベント名]</string>
    <string name="create">作成</string>
    <string name="tab_text1">請求</string>
    <string name="tab_text2">ホーム</string>
    <string name="tab_text3">出納履歴</string>
    <string name="tab_text4">入力</string>
    <string name='tab_text5'>出納履歴</string>
    <string name="event_name">イベント名</string>
    <string name="explanation">説明</string>
    <string name="start_date">開始日</string>
    <string name="null_date">なし</string>
    <string name="end_date">終了日</string>
    <string name="member">メンバー</string>
    <string name="greater_than">＞</string>
    <string name="nominal">名目</string>
    <string name="input_nominal">名目を記入</string>
    <string name="amount">金額</string>
    <string name="input_amount">金額を記入</string>
    <string name="pay">支払う</string>
    <string name="to">請求先</string>
    <string name="from">From</string>
    <string name="hint_destination">From</string>
    <string name="date">日付</string>
    <string name="bill">請求</string>
    <string-array name="budget_list">
        <item>ホテル代</item>
        <item>高速代</item>
        <item>ホテル代2軒目</item>
        <item>その他</item>
    </string-array>
    <string-array name="member_list">
        <item>メンバーA</item>
        <item>メンバーB</item>
        <item>メンバーC</item>
        <item>予算</item>
    </string-array>
    <string name="title_event_member">イベントメンバー</string>
    <string name="abst_title">概要</string>
    <string name="kanji">幹事</string>
    <string name="title_event_detail">イベント詳細</string>
    <string name="title_invite">メンバー招待</string>
    <string name="title_my_account">アカウント</string>
    <string name="add">追加</string>
    <string name="confirm">確定</string>
    <string name="time">時刻</string>
    <string name="date_format">%04d-%02d-%02d</string>
    <string name="time_format">%02d:%02d</string>

</resources>

