<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenters.activities.CreateEventActivity">

    <EditText
        android:id="@+id/event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/event_name"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/white"
        android:padding="5dp"/>

    <EditText
        android:id="@+id/explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/explanation"
        app:layout_constraintTop_toBottomOf="@+id/event_name"
        tools:layout_editor_absoluteX="-41dp"
        android:background="@android:color/white"
        android:padding="5dp"/>

    <LinearLayout
        android:id="@+id/start_date"
        app:layout_constraintTop_toBottomOf="@+id/explanation"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="@android:color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date" />
        <EditText
            android:id="@+id/text_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/null_date"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/start_date"
        android:id="@+id/end_date"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="@android:color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date" />
        <EditText
            android:id="@+id/text_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/null_date"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/end_date"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="@android:color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/member" />
        <TextView
            android:id="@+id/member_list_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/greater_than"
            android:gravity="right" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>