<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenters.activities.InputBillActivity">

    <EditText
        android:id="@+id/nominal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/nominal"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/white"
        android:padding="5dp"/>

    <EditText
        android:id="@+id/amount_of_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:inputType="number"
        android:hint="@string/amount"
        app:layout_constraintTop_toBottomOf="@+id/nominal"
        tools:layout_editor_absoluteX="-41dp"
        android:background="@android:color/white"
        android:padding="5dp"/>

    <LinearLayout
        android:id="@+id/destination"
        app:layout_constraintTop_toBottomOf="@+id/amount_of_money"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="@android:color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_member"
            android:entries="@array/member_list"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/destination"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="@android:color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />
        <EditText
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="datetime"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/bill"/>

</androidx.constraintlayout.widget.ConstraintLayout>