<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presenters.fragments.EventFormFragment">

    <!-- TODO: Update blank fragment layout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_event_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        android:layout_marginTop="10dp" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="20sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_explanation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_event_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        android:layout_marginTop="10dp" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/explanation"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textSize="20sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_start_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_explanation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        android:layout_marginTop="10dp" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_date"
            android:focusableInTouchMode="false"
            android:imeOptions="actionDone"
            android:inputType="date"
            android:textSize="20sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_end_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_start_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        android:layout_marginTop="10dp" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/end_date"
            android:focusableInTouchMode="false"
            android:imeOptions="actionDone"
            android:inputType="date"
            android:textSize="20sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_end_date"
        android:orientation="horizontal" >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_member"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:hintEnabled="true"
            app:hintAnimationEnabled="false"
            android:layout_marginTop="10dp" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/member"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:hint="@string/member"
                android:imeOptions="actionDone"
                android:inputType="date"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_greater_than"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:hintEnabled="true"
            app:hintAnimationEnabled="false"
            android:layout_marginTop="10dp" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/greater_than"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/greater_than"
                android:gravity="end"
                android:focusableInTouchMode="false"
                android:imeOptions="actionDone"
                android:inputType="date"
                android:textSize="20sp"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ll_member"
        android:text="@string/create"/>
</androidx.constraintlayout.widget.ConstraintLayout>