<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenters.activities.EditHistoryActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nominal"
        android:layout_width="@dimen/til_width_0"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        android:layout_marginTop="@dimen/marginTop_of_form_parts" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_nominal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nominal"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="@dimen/form_EditText_size"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_amount_of_money"
        android:layout_width="@dimen/til_width_0"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_nominal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        android:layout_marginTop="@dimen/marginTop_of_form_parts" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_amount_of_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="@dimen/form_EditText_size"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_explanation"
        android:layout_width="@dimen/til_width_0"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_amount_of_money"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        android:layout_marginTop="@dimen/marginTop_of_form_parts" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/explanation"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textSize="@dimen/form_EditText_size"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_date"
        android:layout_width="@dimen/til_width_0"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_explanation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        android:layout_marginTop="@dimen/marginTop_of_form_parts" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:focusableInTouchMode="false"
            android:imeOptions="actionDone"
            android:inputType="date"
            android:textSize="@dimen/form_EditText_size"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_time"
        android:layout_width="@dimen/til_width_0"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        android:layout_marginTop="@dimen/marginTop_of_form_parts" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time"
            android:focusableInTouchMode="false"
            android:imeOptions="actionDone"
            android:inputType="date"
            android:textSize="@dimen/form_EditText_size"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginBottom_of_form_last_part"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/confirm"/>
</androidx.constraintlayout.widget.ConstraintLayout>