<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presenters.fragments.OurHistoryFormFragment">
<!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/ll_nominal"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nominal"
            android:textSize="20sp"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/member"
            android:entries="@array/budget_list"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_amount_of_money"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ll_nominal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        android:layout_marginTop="10dp" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_amount_of_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="20sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        app:layout_constraintTop_toBottomOf="@+id/til_amount_of_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_pay"
        android:text="@string/pay"/>



</androidx.constraintlayout.widget.ConstraintLayout>